GIRAPH-337: Make a specific Giraph configuration for Class caching and specific Giraph configuration
git-svn-id: https://svn.apache.org/repos/asf/giraph/trunk@1390014 13f79535-47bb-0310-9956-ffa450edef68